<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/step_list"
    android:name="com.udacity.sanketbhat.bakingapp.ui.StepListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/step_list_margin_mobile"
    android:layout_marginRight="@dimen/step_list_margin_mobile"
    tools:context=".ui.StepListActivity"
    tools:listitem="@layout/step_list_item" />