...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ingredientsRecyclerView"
        android:layout_width="@dimen/constraint_layout_no_dimension"
        android:layout_height="@dimen/constraint_layout_no_dimension"
        android:layout_marginBottom="@dimen/app_common_margin"
        android:layout_marginEnd="@dimen/app_common_margin"
        android:layout_marginStart="@dimen/app_common_margin"
        app:layout_constraintBottom_toBottomOf="parent"
...
